--- a/package.json
+++ b/package.json
@@ -1,23 +1,21 @@
 {
     "private": true,
-    "dependencies": {
-        "babel-polyfill": "6.26.0",
-        "babel-runtime": "6.26.0",
-        "react": "16.4.0",
-        "react-bootstrap": "0.32.1",
-        "react-dom": "16.4.0",
-        "remotedev": "0.2.7"
-    },
     "devDependencies": {
-        "babel-core": "6.26.3",
-        "babel-loader": "7.1.4",
-        "babel-plugin-transform-runtime": "6.23.0",
-        "babel-preset-env": "1.7.0",
-        "concurrently": "3.5.1",
-        "fable-loader": "1.1.6",
-        "fable-utils": "1.0.6",
-        "webpack": "4.11.1",
+        "@babel/polyfill": "^7.0.0",
+        "@babel/runtime": "^7.0.0",
+        "react": "16.7.0",
+        "react-bootstrap": "0.32.4",
+        "react-dom": "16.7.0",
+        "remotedev": "0.2.9",
+        "@babel/core": "^7.2.2",
+        "@babel/plugin-transform-runtime": "^7.0.0",
+        "@babel/preset-env": "^7.0.0",
+        "babel-loader": "8.0.5",
+        "concurrently": "4.1.0",
+        "fable-compiler": "^2.1.10",
+        "fable-loader": "2.1.2",
+        "webpack": "4.28.4",
         "webpack-cli": "^3.0.2",
-        "webpack-dev-server": "3.1.4"
+        "webpack-dev-server": "3.1.14"
     }
 }
